# LLMOps

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  kubernetes.yaml
src/: main.py  main.rs
